--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>防京东首页</title>
+    <title>仿京东首页</title>
     <link rel="shortcut icon" href="favicon.ico">
 
     <link href="css/base.css" rel="stylesheet" type="text/css">
@@ -10,11 +10,15 @@
 
 </head>
 <body class="index">
-    <div class="top-banner">
-        <div class="w tp">
-            <img src="images/base/topbanner.jpg" alt="顶部图片" title="美丽图片">
-        </div>
+<div id="gotop" class="top">
+    <img src="images/base/Top.jpg" alt="返回页面顶部小火箭"/>
+</div>
+
+<div class="top-banner">
+    <div class="w tp">
+        <img src="images/base/topbanner.jpg" alt="顶部图片" title="美丽图片">
     </div>
+</div>
 <!--京东首页头部-->
 <div class="shortcut">
     <div class="w">
@@ -480,11 +484,11 @@
         </div>
         <div id="bigtu2">
             <ul>
-                <li id="2li01"><img src="images/daojishi/yf-01.jpg" alt=""></li>
-                <li id="2li02"><img src="images/daojishi/yf-02.jpg" alt=""></li>
-                <li id="2li03"><img src="images/daojishi/yf-03.jpg" alt=""></li>
-                <li id="2li04"><img src="images/daojishi/yf-04.jpg" alt=""></li>
-                <li id="2li05"><img src="images/daojishi/yf-05.jpg" alt=""></li>
+                <li id="2li01"><img src="images/daojishi/xz-01.jpg" alt=""></li>
+                <li id="2li02"><img src="images/daojishi/xz-02.jpg" alt=""></li>
+                <li id="2li03"><img src="images/daojishi/xz-03.jpg" alt=""></li>
+                <li id="2li04"><img src="images/daojishi/xz-04.jpg" alt=""></li>
+                <li id="2li05"><img src="images/daojishi/xz-05.jpg" alt=""></li>
             </ul>
             <div class="price">
                 <strong>￥599.00</strong>
@@ -550,7 +554,7 @@
 </div>
 <!--页面底部区域-->
 <div class="footer">
-    <div class="service">
+    <div class="w">
         <div class="slogen">
             <span class="item slogen1">
                 <img src="images/base/slogen1.png" alt="">
@@ -616,8 +620,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="w">
         <div class="links">
             <a href="">关于我们</a>|
             <a href="">联系我们</a>|
