--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>
         </div>
         <div class="search">
-            <input type="text" name="" id="" value="数码相机">
+            <input type="text" name="" id="txt" value="数码相机">
             <button>搜索</button>
         </div>
         <div class="mycar">
@@ -320,7 +320,7 @@
                 <li><a href="#"><img src="images/lunbo/07.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/lunbo/08.jpg" alt=""></a></li>
             </ul>
-            <ol>
+            <ol id="showna">
                 <li class="libg">1</li>
                 <li>2</li>
                 <li>3</li>
@@ -356,15 +356,15 @@
                     </div>
                     <div class="main">
                         <p><a href="#">《京东隐私政策》修改公告</a></p>
-                        <p><a href="#">开学季，箱包爆品1元秒</a></p>
-                        <p><a href="#">2017，WRC机器人购物节</a></p>
-                        <p><a href="#">七夕好礼低至199减100</a></p>
+                        <p><a href="#">京东商城到家服务品牌上线</a></p>
+                        <p><a href="#">京东保租上线 减法生活有惊喜</a></p>
+                        <p><a href="#">京东商城全场大减价</a></p>
                     </div>
                     <div class="main">
                         <p><a href="#">郭敬明隐情大揭秘</a></p>
-                        <p><a href="#">开学季，箱包爆品1元秒</a></p>
-                        <p><a href="#">2017，WRC机器人购物节</a></p>
-                        <p><a href="#">七夕好礼低至199减100</a></p>
+                        <p><a href="#">吴京《战狼2》背后的故事</a></p>
+                        <p><a href="#">王思聪低调隐身百日后重现江湖</a></p>
+                        <p><a href="#">张亮厨艺大揭秘</a></p>
                     </div>
                 </div>
             </div>
@@ -460,94 +460,96 @@
 <!--倒计时设置-->
 <div class="section3">
     <div class="w">
-        <div class="daojishi">
+        <div class="daojishi clearfix">
             <div id="demo">
 
             </div>
         </div>
-        <div id="bigtu">
-            <ul>
-                <li id="li01"><img src="images/daojishi/yf-01.jpg" alt=""></li>
-                <li id="li02"><img src="images/daojishi/yf-02.jpg" alt=""></li>
-                <li id="li03"><img src="images/daojishi/yf-03.jpg" alt=""></li>
-                <li id="li04"><img src="images/daojishi/yf-04.jpg" alt=""></li>
-                <li id="li05"><img src="images/daojishi/yf-05.jpg" alt=""></li>
-            </ul>
-            <div class="price">
-                <strong>￥599.00</strong>
+        <div class="bigbox">
+            <div id="bigtu">
+                <ul>
+                    <li id="li01"><img src="images/daojishi/yf-01.jpg" alt=""></li>
+                    <li id="li02"><img src="images/daojishi/yf-02.jpg" alt=""></li>
+                    <li id="li03"><img src="images/daojishi/yf-03.jpg" alt=""></li>
+                    <li id="li04"><img src="images/daojishi/yf-04.jpg" alt=""></li>
+                    <li id="li05"><img src="images/daojishi/yf-05.jpg" alt=""></li>
+                </ul>
+                <div class="price">
+                    <strong>￥599.00</strong>
+                </div>
+                <div class="name">
+                    <a href="#">【国际大牌 限时限量】波司登男装男士轻薄羽绒服 秋季新款保暖羽绒服</a>
+                    <p><i>7</i>条评价</p>
+                    <p>波司登男装 服饰旗舰店</p>
+                </div>
             </div>
-            <div class="name">
-                <a href="#">【国际大牌 限时限量】波司登男装男士轻薄羽绒服 秋季新款保暖羽绒服</a>
-                <p><i>7</i>条评价</p>
-                <p>波司登男装 服饰旗舰店</p>
+            <div id="bigtu2">
+                <ul>
+                    <li id="2li01"><img src="images/daojishi/xz-01.jpg" alt=""></li>
+                    <li id="2li02"><img src="images/daojishi/xz-02.jpg" alt=""></li>
+                    <li id="2li03"><img src="images/daojishi/xz-03.jpg" alt=""></li>
+                    <li id="2li04"><img src="images/daojishi/xz-04.jpg" alt=""></li>
+                    <li id="2li05"><img src="images/daojishi/xz-05.jpg" alt=""></li>
+                </ul>
+                <div class="price">
+                    <strong>￥599.00</strong>
+                </div>
+                <div class="name">
+                    <a href="#">【国际大牌 限时限量】波司登男装男士轻薄羽绒服 秋季新款保暖羽绒服</a>
+                    <p><i>7</i>条评价</p>
+                    <p>波司登男装 服饰旗舰店</p>
+                </div>
             </div>
-        </div>
-        <div id="bigtu2">
-            <ul>
-                <li id="2li01"><img src="images/daojishi/xz-01.jpg" alt=""></li>
-                <li id="2li02"><img src="images/daojishi/xz-02.jpg" alt=""></li>
-                <li id="2li03"><img src="images/daojishi/xz-03.jpg" alt=""></li>
-                <li id="2li04"><img src="images/daojishi/xz-04.jpg" alt=""></li>
-                <li id="2li05"><img src="images/daojishi/xz-05.jpg" alt=""></li>
-            </ul>
-            <div class="price">
-                <strong>￥599.00</strong>
+            <div id="bigtu3">
+                <ul>
+                    <li id="3li01"><img src="images/daojishi/yf-01.jpg" alt=""></li>
+                    <li id="3li02"><img src="images/daojishi/yf-02.jpg" alt=""></li>
+                    <li id="3li03"><img src="images/daojishi/yf-03.jpg" alt=""></li>
+                    <li id="3li04"><img src="images/daojishi/yf-04.jpg" alt=""></li>
+                    <li id="3li05"><img src="images/daojishi/yf-05.jpg" alt=""></li>
+                </ul>
+                <div class="price">
+                    <strong>￥599.00</strong>
+                </div>
+                <div class="name">
+                    <a href="#">【国际大牌 限时限量】波司登男装男士轻薄羽绒服 秋季新款保暖羽绒服</a>
+                    <p><i>7</i>条评价</p>
+                    <p>波司登男装 服饰旗舰店</p>
+                </div>
             </div>
-            <div class="name">
-                <a href="#">【国际大牌 限时限量】波司登男装男士轻薄羽绒服 秋季新款保暖羽绒服</a>
-                <p><i>7</i>条评价</p>
-                <p>波司登男装 服饰旗舰店</p>
+            <div id="bigtu4">
+                <ul>
+                    <li id="4li01"><img src="images/daojishi/yf-01.jpg" alt=""></li>
+                    <li id="4li02"><img src="images/daojishi/yf-02.jpg" alt=""></li>
+                    <li id="4li03"><img src="images/daojishi/yf-03.jpg" alt=""></li>
+                    <li id="4li04"><img src="images/daojishi/yf-04.jpg" alt=""></li>
+                    <li id="4li05"><img src="images/daojishi/yf-05.jpg" alt=""></li>
+                </ul>
+                <div class="price">
+                    <strong>￥599.00</strong>
+                </div>
+                <div class="name">
+                    <a href="#">【国际大牌 限时限量】波司登男装男士轻薄羽绒服 秋季新款保暖羽绒服</a>
+                    <p><i>7</i>条评价</p>
+                    <p>波司登男装 服饰旗舰店</p>
+                </div>
             </div>
-        </div>
-        <div id="bigtu3">
-            <ul>
-                <li id="3li01"><img src="images/daojishi/yf-01.jpg" alt=""></li>
-                <li id="3li02"><img src="images/daojishi/yf-02.jpg" alt=""></li>
-                <li id="3li03"><img src="images/daojishi/yf-03.jpg" alt=""></li>
-                <li id="3li04"><img src="images/daojishi/yf-04.jpg" alt=""></li>
-                <li id="3li05"><img src="images/daojishi/yf-05.jpg" alt=""></li>
-            </ul>
-            <div class="price">
-                <strong>￥599.00</strong>
-            </div>
-            <div class="name">
-                <a href="#">【国际大牌 限时限量】波司登男装男士轻薄羽绒服 秋季新款保暖羽绒服</a>
-                <p><i>7</i>条评价</p>
-                <p>波司登男装 服饰旗舰店</p>
-            </div>
-        </div>
-        <div id="bigtu4">
-            <ul>
-                <li id="4li01"><img src="images/daojishi/yf-01.jpg" alt=""></li>
-                <li id="4li02"><img src="images/daojishi/yf-02.jpg" alt=""></li>
-                <li id="4li03"><img src="images/daojishi/yf-03.jpg" alt=""></li>
-                <li id="4li04"><img src="images/daojishi/yf-04.jpg" alt=""></li>
-                <li id="4li05"><img src="images/daojishi/yf-05.jpg" alt=""></li>
-            </ul>
-            <div class="price">
-                <strong>￥599.00</strong>
-            </div>
-            <div class="name">
-                <a href="#">【国际大牌 限时限量】波司登男装男士轻薄羽绒服 秋季新款保暖羽绒服</a>
-                <p><i>7</i>条评价</p>
-                <p>波司登男装 服饰旗舰店</p>
-            </div>
-        </div>
-        <div id="bigtu5">
-            <ul>
-                <li id="5li01"><img src="images/daojishi/yf-01.jpg" alt=""></li>
-                <li id="5li02"><img src="images/daojishi/yf-02.jpg" alt=""></li>
-                <li id="5li03"><img src="images/daojishi/yf-03.jpg" alt=""></li>
-                <li id="5li04"><img src="images/daojishi/yf-04.jpg" alt=""></li>
-                <li id="5li05"><img src="images/daojishi/yf-05.jpg" alt=""></li>
-            </ul>
-            <div class="price">
-                <strong>￥599.00</strong>
-            </div>
-            <div class="name">
-                <a href="#">【国际大牌 限时限量】波司登男装男士轻薄羽绒服 秋季新款保暖羽绒服</a>
-                <p><i>7</i>条评价</p>
-                <p>波司登男装 服饰旗舰店</p>
+            <div id="bigtu5">
+                <ul>
+                    <li id="5li01"><img src="images/daojishi/yf-01.jpg" alt=""></li>
+                    <li id="5li02"><img src="images/daojishi/yf-02.jpg" alt=""></li>
+                    <li id="5li03"><img src="images/daojishi/yf-03.jpg" alt=""></li>
+                    <li id="5li04"><img src="images/daojishi/yf-04.jpg" alt=""></li>
+                    <li id="5li05"><img src="images/daojishi/yf-05.jpg" alt=""></li>
+                </ul>
+                <div class="price">
+                    <strong>￥599.00</strong>
+                </div>
+                <div class="name">
+                    <a href="#">【国际大牌 限时限量】波司登男装男士轻薄羽绒服 秋季新款保暖羽绒服</a>
+                    <p><i>7</i>条评价</p>
+                    <p>波司登男装 服饰旗舰店</p>
+                </div>
             </div>
         </div>
     </div>
@@ -555,7 +557,7 @@
 <!--页面底部区域-->
 <div class="footer">
     <div class="w">
-        <div class="slogen">
+        <div class="slogen clearfix">
             <span class="item slogen1">
                 <img src="images/base/slogen1.png" alt="">
             </span>
@@ -569,7 +571,7 @@
                 <img src="images/base/slogen4.png" alt="">
             </span>
         </div>
-        <div class="w shopping">
+        <div class="shopping">
             <dl>
                 <dt><a href="#">购物指南</a></dt>
                 <dd><a href="#">购物流程</a></dd>
