--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
     </div>
 </div>
 <!--页面底部区域-->
-<div class="footer">
+<div class="footer clearfix">
     <div class="w">
         <div class="slogen clearfix">
             <span class="item slogen1">
