--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 
             </div>
         </div>
-        <div class="bigbox">
+        <div id="bigbox">
             <div id="bigtu">
                 <ul>
                     <li id="li01"><img src="images/daojishi/yf-01.jpg" alt=""></li>
