--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>仿京东首页</title>
     <link rel="shortcut icon" href="favicon.ico">
-
     <link href="css/base.css" rel="stylesheet" type="text/css">
     <link href="css/index.css" rel="stylesheet" type="text/css">
 
@@ -13,7 +12,6 @@
 <div id="gotop" class="top">
     <img src="images/base/Top.jpg" alt="返回页面顶部小火箭"/>
 </div>
-
 <div class="top-banner">
     <div class="w tp">
         <img src="images/base/topbanner.jpg" alt="顶部图片" title="美丽图片">
@@ -369,80 +367,18 @@
                 </div>
             </div>
             <div class="incos">
-                <ul>
-                    <li>
-                        <a href="#">
-                            <i class="hua-1"></i>
-                            <span>话费</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="hua-2"></i>
-                            <span>机票</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="hua-3"></i>
-                            <span>酒店</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="hua-4"></i>
-                            <span>游戏</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="hua-5"></i>
-                            <span>企业购</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="hua-6"></i>
-                            <span>加油卡</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="hua-7"></i>
-                            <span>电影票</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="hua-8"></i>
-                            <span>火车票</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="hua-9"></i>
-                            <span>众筹</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="hua-10"></i>
-                            <span>理财</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="hua-11"></i>
-                            <span>礼品卡</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="hua-12"></i>
-                            <span>白条</span>
-                        </a>
-                    </li>
-                </ul>
+                <a href="#" class="incos01">话费</a>
+                <a href="#" class="incos02">机票</a>
+                <a href="#" class="incos03">酒店</a>
+                <a href="#" class="incos04">游戏</a>
+                <a href="#" class="incos05">企业购</a>
+                <a href="#" class="incos06">加油卡</a>
+                <a href="#" class="incos07">电影票</a>
+                <a href="#" class="incos08">火车票</a>
+                <a href="#" class="incos09">众筹</a>
+                <a href="#" class="incos10">理财</a>
+                <a href="#" class="incos11">礼品卡</a>
+                <a href="#" class="incos12">白条</a>
             </div>
 
         </div>
@@ -466,7 +402,7 @@
             </div>
         </div>
         <div id="bigbox">
-            <div id="bigtu">
+            <div id="bigtu" class="bigtu">
                 <ul>
                     <li id="li01"><img src="images/daojishi/yf-01.jpg" alt=""></li>
                     <li id="li02"><img src="images/daojishi/yf-02.jpg" alt=""></li>
@@ -483,7 +419,7 @@
                     <p>波司登男装 服饰旗舰店</p>
                 </div>
             </div>
-            <div id="bigtu2">
+            <div id="bigtu2" class="bigtu">
                 <ul>
                     <li id="2li01"><img src="images/daojishi/xz-01.jpg" alt=""></li>
                     <li id="2li02"><img src="images/daojishi/xz-02.jpg" alt=""></li>
@@ -500,7 +436,7 @@
                     <p>波司登男装 服饰旗舰店</p>
                 </div>
             </div>
-            <div id="bigtu3">
+            <div id="bigtu3" class="bigtu">
                 <ul>
                     <li id="3li01"><img src="images/daojishi/yf-01.jpg" alt=""></li>
                     <li id="3li02"><img src="images/daojishi/yf-02.jpg" alt=""></li>
@@ -517,7 +453,7 @@
                     <p>波司登男装 服饰旗舰店</p>
                 </div>
             </div>
-            <div id="bigtu4">
+            <div id="bigtu4" class="bigtu">
                 <ul>
                     <li id="4li01"><img src="images/daojishi/yf-01.jpg" alt=""></li>
                     <li id="4li02"><img src="images/daojishi/yf-02.jpg" alt=""></li>
@@ -534,7 +470,7 @@
                     <p>波司登男装 服饰旗舰店</p>
                 </div>
             </div>
-            <div id="bigtu5">
+            <div id="bigtu5" class="bigtu">
                 <ul>
                     <li id="5li01"><img src="images/daojishi/yf-01.jpg" alt=""></li>
                     <li id="5li02"><img src="images/daojishi/yf-02.jpg" alt=""></li>
