--- a/shouji.html
+++ b/shouji.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width = device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>京东手机页面</title>
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="css/shouji.css">
+    <link rel="stylesheet" href="css/xiugai.css">
 </head>
 <body>
 <div class="section1">
     <div class="lunbo">
         <img src="images/lunbo/01.jpg" alt="">
     </div>
-    <div class="search">
-        <input type="text" name="" id="txt" value="数码相机">
-        <button>搜索</button>
+    <div class="w">
+        <div class="search">
+            <input type="text" name="" id="txt" value="数码相机">
+            <button>搜索</button>
+        </div>
     </div>
 </div>
 <div class="section2">
@@ -70,12 +72,12 @@
             <img src="images/shouji/lb.jpg" alt="大礼包">
         </div>
         <div class="news">
-            <a href="#">
+            <a  class="a-left" href="#">
                 <img src="images/shouji/news.png" alt="">
             </a>
             <div class="newlis">
                 <ul>
-                    <li>青春好开森，开学好货9.9元秒</li>
+                    <li>青春好开森</li>
                 </ul>
             </div>
             <a class ="a-right" href="#">更多
@@ -229,9 +231,6 @@
             </div>
         </div>
     </div>
-</div>
-<div class="section6">
-
 </div>
 <div class="sectionx">
     <div class="w">
